Add RAG regulatory compliance mapping with pgvector and Voyage AI
Implement RAG pipeline that retrieves relevant regulatory controls (PCI-DSS,
HIPAA, FFIEC, NYDFS 500, SOX, CIS AWS) via pgvector cosine similarity search
and injects them into Claude prompts for compliance-aware enrichment. Findings
now include regulatory analysis narratives and structured control violation
mappings with relevance scores.

- Switch to pgvector/pgvector:pg16 Docker image with vector extension
- Add EmbeddingService (Voyage AI voyage-3, 1024-dim, asymmetric embedding)
- Add RegulatoryIngestionService (186 curated controls, auto-load on startup)
- Add RegulatoryRetrievalService (top-5 cosine similarity with IVFFlat index)
- Extend ClaudeService prompts with REGULATORY_ANALYSIS and REGULATORY_MAPPINGS
- Add compliance summary and per-finding compliance API endpoints
- Add frontend compliance badges, regulatory detail panels, and framework grid
- Graceful degradation when Voyage API key is not configured

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>